8140001: _allocateInstance intrinsic does not throw InstantiationException for abstract classes and interfaces

Reviewed-by: kvn, shade